Fix map on IE

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
@@ -48,6 +48,19 @@
   }
 }
 
+.svg-container {
+  width: 100%;
+  height: 0;
+  padding-top: 64%;
+  position: relative;
+}
+
+.svg-container svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #coverage_select {
   display: none;
   width: 90%;
